<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/img_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/mic"
        app:siBorderColor="@color/black_000000"
        app:siBorderWidth="0.1sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/profilename"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView26"
        android:layout_below="@+id/textView26"
        android:text="@string/profileemail" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/lockedpadlock" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/imageView27"
        android:layout_marginLeft="220dp"
        android:src="@drawable/pencil" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="26dp"
        android:text="@string/logout"
        android:textSize="17sp" />

</RelativeLayout>
